--- a/tutor/index.html
+++ b/tutor/index.html
@@ -81,7 +81,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Konzepte</h3>
-									<p>Lerne universell anwendbare Konzepte der Programmierung. </p>
+									<p>Lerne universell anwendbare Konzepte der Programmierung. Ich lege großen Wert auf interaktives Lernen. Du wirst von Anfang an selbst Hand anlegen.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
