--- a/tutor/index.html
+++ b/tutor/index.html
@@ -22,7 +22,7 @@
 							<li><a href="#intro">Wilkommen</a></li>
 							<li><a href="#one">Über mich</a></li>
 							<li><a href="#two">Die Stunden</a></li>
-							<li><a href="#three">Kotakt</a></li>
+							<li><a href="#three">Kontakt</a></li>
 						</ul>
 					</nav>
 				</div>
