Korrekturen nach gegenlesen.
Tara, du bist die beste :)

--- a/tutor/index.html
+++ b/tutor/index.html
@@ -51,7 +51,7 @@
 								<div class="inner">
 									<h2>Über mich</h2>
 									<p>Hey, Ich bin David! *winkt*<br/>
-									Mit 6 Jahren Erfahrung als Hobby Developer und 2 Jahren, die ich nebenher professionell gearbeitet habe besitze ich einen großen Schatz an Erfahrung den ich weiter geben möchte.
+									Mit 6 Jahren Erfahrung als Hobby Developer und 2 Jahren, die ich nebenher professionell gearbeitet habe, besitze ich einen großen Schatz an Erfahrung den ich weiter geben möchte.
 									Ich gebe schon seit 3 Jahren Nachhilfe und will dir helfen den Einstieg ins Programmieren zu finden.</p>
 								</div>
 							</div>
@@ -63,7 +63,7 @@
 									<h2>Meine Projekte</h2>
 									<p>GitHub ist eine Platform für Software-Developer, um kostenlos Code mit anderen Devs zu teilen.
 										 Ich habe dort einige Projekte in Java, Python und C öffentlich zugänglich eingestellt.
-										 Einige meiner besten Projekte sind der ams-transpiler, WeatherScraper und erf-approximation, eine polynomische Annäherung and die statistische Fehlerfunktion mit einem Gradientenverfahren.</p>
+										 Einige meiner besten Projekte sind der <em>ams-transpiler</em>, <em>WeatherScraper</em> und <em>erf-approximation</em>, eine polynomische Annäherung an die statistische Fehlerfunktion mit einem Gradientenverfahren.</p>
 									<ul class="actions">
 										<li><a href="https://www.github.com/davidkowalk" target="_blank" class="button">Mein Profil</a></li>
 									</ul>
@@ -76,12 +76,12 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Die Stunden</h2>
-							<p>In den Stunden wirst du ein Grundverständniss für das Programmieren in Python erlangen, wie du dein Verständniss auf andere Sprachen übertragen kannst, und wir werden zusammen deine ersten Projekte bauen.</p>
+							<p>In den Stunden wirst du ein Grundverständniss für das Programmieren in Python erlangen, und wie du dein Verständniss auf andere Sprachen übertragen kannst. Zudem werden wir zusammen deine ersten Projekte bauen.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Konzepte</h3>
-									<p>Lerne universell anwendbare Konzepte der Programmierung. Ich lege großen Wert auf interaktives Lernen. Du wirst von Anfang an selbst Hand anlegen.</p>
+									<p>Lerne universell anwendbare Konzepte der Programmierung. Du wirst von Anfang an selbst direkt </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
@@ -91,11 +91,11 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Flexible Stundenzeiten</h3>
-									<p>Nimm nur die Stunden, die du brauchst! Kein Zwang einen ganzen Kurs zu belegen.</p>
+									<p>Nimm nur die Stunden, die du brauchst! Kein Zwang einen ganzen Kurs zu belegen!</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Die besten Preise!</h3>
+									<h3>Preise</h3>
 									<p>Eine 60 Minuten Stunde kostet nur <a href="#asterisk" class="scrolly">20€*</a>. Stunden können von Woche zu Woche vereinbart werden.</p>
 								</section>
 							</div>
