--- a/tutor/index.html
+++ b/tutor/index.html
@@ -81,7 +81,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Konzepte</h3>
-									<p>Lerne universell anwendbare Konzepte der Programmierung. Du wirst von Anfang an selbst direkt </p>
+									<p>Lerne universell anwendbare Konzepte der Programmierung. Du wirst von Anfang an selbst direkt am Code arbeiten.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
@@ -95,7 +95,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Preise</h3>
+									<h3>Meine Preise</h3>
 									<p>Eine 60 Minuten Stunde kostet nur <a href="#asterisk" class="scrolly">20€*</a>. Stunden können von Woche zu Woche vereinbart werden.</p>
 								</section>
 							</div>
@@ -132,7 +132,7 @@
 									</form>
 								</section-->
 								<section>
-								<p>Du möchtest deine erste Stunde nehmen? Schreib mich auf WhatsApp oder Telegram an, oder schick mir eine SMS.
+								<p>Du möchtest deine erste Stunde nehmen? Schreib mich auf WhatsApp oder Telegram an, oder schick' mir eine SMS.
 								<p id="asterisk">*Bei langer Anfahrtszeit können Preise abweichen</p>
 								<p>Gebrauch der Kontaktdaten zu Werbezwecken ohne ausdrückliche Genehmigung ist strafbar.</p>
 								</section>
