Second Round of feedback.
Björn ist n Ehrenmann.

--- a/tutor/index.html
+++ b/tutor/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Kowalk Tutoring</h1>
-							<p>Eins zu eins Programmierstunden für Anfänger.
+							<p>Private Programmierstunden für Anfänger.
 							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Mehr Erfahren</a></li>
@@ -50,8 +50,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Über mich</h2>
-									<p>Hey, Ich bin David! *winkt*<br/>
-									Mit 6 Jahren Erfahrung als Hobby Developer und 2 Jahren, die ich nebenher professionell gearbeitet habe, besitze ich einen großen Schatz an Erfahrung den ich weiter geben möchte.
+									<p>Hey, Ich bin David! <em>*winkt*</em><br/>
+									Mit 6 Jahren Erfahrung als Hobby-Developer und 2 Jahren, die ich nebenher professionell gearbeitet habe, besitze ich einen großen Schatz an Erfahrung den ich weitergeben möchte.
 									Ich gebe schon seit 3 Jahren Nachhilfe und will dir helfen den Einstieg ins Programmieren zu finden.</p>
 								</div>
 							</div>
@@ -132,8 +132,9 @@
 									</form>
 								</section-->
 								<section>
+								<span class="image right"><img src="images/Selfie.jpg" alt="" style = "width: 150px; height: 150px"/></span>
 								<p>Du möchtest deine erste Stunde nehmen? Schreib mich auf WhatsApp oder Telegram an, oder schick' mir eine SMS.
-								<p id="asterisk">*Bei langer Anfahrtszeit können Preise abweichen</p>
+								<p id="asterisk">*Bei langer Anfahrtszeit können Preise abweichen.</p>
 								<p>Gebrauch der Kontaktdaten zu Werbezwecken ohne ausdrückliche Genehmigung ist strafbar.</p>
 								</section>
 								<section>
