That was the exact opposite of what he  wanted me to do.

--- a/tutor/index.html
+++ b/tutor/index.html
@@ -50,7 +50,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Über mich</h2>
-									<p>Hey, Ich bin David! <em>*winkt*</em><br/>
+									<p>Hey, Ich bin David!<br/>
 									Mit 6 Jahren Erfahrung als Hobby-Developer und 2 Jahren, die ich nebenher professionell gearbeitet habe, besitze ich einen großen Schatz an Erfahrung den ich weitergeben möchte.
 									Ich gebe schon seit 3 Jahren Nachhilfe und will dir helfen den Einstieg ins Programmieren zu finden.</p>
 								</div>
