--- a/tutor/index.html
+++ b/tutor/index.html
@@ -63,7 +63,8 @@
 									<h2>Meine Projekte</h2>
 									<p>GitHub ist eine Platform für Software-Developer, um kostenlos Code mit anderen Devs zu teilen.
 										 Ich habe dort einige Projekte in Java, Python und C öffentlich zugänglich eingestellt.
-										 Einige meiner besten Projekte sind der <em>ams-transpiler</em>, <em>WeatherScraper</em> und <em>erf-approximation</em>, eine polynomische Annäherung an die statistische Fehlerfunktion mit einem Gradientenverfahren.</p>
+										 Einige meiner besten Projekte sind der <em><a href = "https://github.com/davidkowalk/advanced_minecraft_scripting" target = "_blank">ams-transpiler</a></em>,
+										 <em><a href = "https://github.com/davidkowalk/WeatherScraper" target = "_blank">WeatherScraper</a></em> und <em><a href = "https://github.com/davidkowalk/erf-approximation" target = "_blank">erf-approximation</a></em>, eine polynomische Annäherung an die statistische Fehlerfunktion mit einem Gradientenverfahren.</p>
 									<ul class="actions">
 										<li><a href="https://www.github.com/davidkowalk" target="_blank" class="button">Mein Profil</a></li>
 									</ul>
@@ -76,7 +77,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Die Stunden</h2>
-							<p>In den Stunden wirst du ein Grundverständniss für das Programmieren in Python erlangen, und wie du dein Verständniss auf andere Sprachen übertragen kannst. Zudem werden wir zusammen deine ersten Projekte bauen.</p>
+							<p>In den Stunden wirst du ein Grundverständnis für das Programmieren in Python erlangen, und wie du dein Verständnis auf andere Sprachen übertragen kannst. Zudem werden wir zusammen deine ersten Projekte bauen.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -96,7 +97,7 @@
 								<section>
 									<span class="icon major fa-gem"></span>
 									<h3>Meine Preise</h3>
-									<p>Eine 60 Minuten Stunde kostet nur <a href="#asterisk" class="scrolly">20€*</a>. Stunden können von Woche zu Woche vereinbart werden.</p>
+									<p>Eine 60 Minuten Stunde kostet nur <a href="#asterisk" class="scrolly">15€*</a>. Stunden können von Woche zu Woche vereinbart werden.</p>
 								</section>
 							</div>
 							<!--ul class="actions">
